2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Remove vm.h.  Add storage.h
	and as.h.
	(AM_CPPFLAGS): Rename from this...
	(COMMON_CPPFLAGS): ... to this.
	(libhurd_mm_a_SOURCES): Remove vm.h, vm.c, priv.h, store.c, map.c,
	memory.c, pager.c, core.c, anonymous.c, anonymous.h,
	physmem-user.h and physmem-user.c.  Add capalloc.h, capalloc.c,
	storage.h, storage.c, as.h and mmap.c.
	* headers.m4: Don't link $(BUILDDIR)/include/hurd/vm.h to vm.h or
	$(BUILDDIR)/include/hurd/anonymous.h to anonymous.h.  Link
	$(BUILDDIR)/include/hurd/as.h to as.h,
	$(BUILDDIR)/include/hurd/storage.h to storage.h, and
	$(BUILDDIR)/include/hurd/capalloc.h to libhurd-mm/capalloc.h.
	* mm-init.c: Rewrite.
	* mm.h: Likewise.
	* as.c: Likewise.
	* as.h: New file.
	* capalloc.h: Likewise.
	* capalloc.c: Likewise.
	* mmap.c: Likewise.
	* storage.h: Likewise.
	* storage.c: Likewise.

	* physmem-user.h: Remove file.
	* physmem-user.c: Remove file.

2005-04-06  Neal H. Walfield  <neal@gnu.org>

	* vm.h (hurd_vm_allocate): Remove declaration.
	(hurd_vm_release): Rename from hurd_vm_deallocate.  Update
	callers.
	(VM_HERE): Remove.
	(VM_ZEROFILL): Remove.
	* vm.c (hurd_vm_allocate): Remove function.
	(hurd_vm_release): Rename from hurd_vm_deallocate.

	* mm.h: Include <stdint.h>, <sys/types.h>, <l4/types.h> and
	<hurd/physmem.h>.
	(hurd_store_t): New typedef.
	(hurd_memory_t): Likewise.
	(hurd_memory_use): New declaration.
	(hurd_memory_transfer): Likewise.
	(hurd_store_fault_t): New typedef.
	(hurd_store_init): New declaration.
	(hurd_store_size): New declaration.
	(HURD_VM_HERE): New definition.
	(hurd_store_bind_to_vm): New declaration.
	(hurd_store_flush): New declaration.

	* priv.h: Include "vm.h" and "mm.h".
	(here): New debugging macro.
	(struct region): Move to...
	* mm.h: ...here.
	(struct hurd_memory): Rename from struct frame.
	Rename field dc_start to cont_start.  Add field cont.  Remove
	field refs.  Update users.