@@ -24,8 +24,9 @@ lib_LIBRARIES = libhurd-mm.a
 includehurddir = $(includedir)/hurd
 includehurd_HEADERS = mm.h storage.h as.h
 
-COMMON_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts
+COMMON_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts \
 	-D_GNU_SOURCE -Wall -std=gnu99 -g -O3
+libhurd_mm_a_CPPFLAGS = $(COMMON_CPPFLAGS)
 libhurd_mm_a_SOURCES = mm.h			\
 	capalloc.h capalloc.c			\
 	storage.h storage.c			\
